fixed typo and updated style css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#projects">PROJECTS</a>
         <a href="#contact">CONTACT</a>
     </nav>
-    <!-- Home Secction -->
+    <!-- Home Section -->
     <section id="home">
         <div class="title-group">
           <h1>Awesome Light Dark Mode</h1> 
@@ -40,7 +40,7 @@
         <h1>Undraw Illustrations</h1>
         <div class="about-container">
           <div class="image-container">
-            <h2>Web Inovation</h2>
+            <h2>Web Innovation</h2>
             <img src="img/undraw_dev_productivity_light.svg" alt="dev productivity" id="image1">
         </div>
       <div class="image-container">
