--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Home Section -->
     <section id="home">
         <div class="title-group">
-          <h1>Awesome Light Dark Mode</h1> 
+          <h1>Awesome Light & Dark Mode</h1> 
           <h2>Welcome to the Website!</h2>
         </div>
     </section>
